# fatg

./: .gitignore  README.md  pyproject.toml
fatg/: __init__.py  config.py  engine.py  hardware.py
fatg/backends/: ollama.py
fatg/tiers/: llm.py
fatg/validators/: finnish.py
tests/: test_fatg.py
